#857 disabled integration tests in deegree-workspace-tests due to unresolvable shortcomings of deegree-maven-plugin