@@ -150,7 +150,9 @@
           <version>3.0.0-M5</version>
           <configuration>
             <!-- Travis build workaround -->
-            <argLine>-Djava.awt.headless=true -Xms1024m -Xmx2048m --illegal-access=permit</argLine>
+            <argLine>-Djava.awt.headless=true -Xms1024m -Xmx2048m --illegal-access=permit
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
             <forkCount>1</forkCount>
             <reuseForks>true</reuseForks>
             <skip>${skip.unit.tests}</skip>
